# disco4est

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  driver.c  version.h.in
Databox/: d4est_databox.c  d4est_databox.h
ElementData/: curved_element_data.c  curved_element_data.h  d4est_element_data.c  d4est_element_data.h  d4est_mesh.c  d4est_mesh.h  element_data.c  element_data.h
EllipticSystem/: d4est_elliptic_data.c  d4est_elliptic_data.h  d4est_elliptic_eqns.c  d4est_elliptic_eqns.h  problem_data.c  problem_data.h  problem_weakeqn_ptrs.h
Estimators/: bi_estimator.c  bi_estimator.h  bi_estimator_flux_fcns.c  bi_estimator_flux_fcns.h  bi_estimator_flux_fcns_new.c  bi_estimator_new.c  curved_bi_estimator.c  curved_bi_estimator.h  curved_bi_estimator_flux_fcns.c  curved_bi_estimator_flux_fcns.h  d4est_estimator_bi.c  d4est_estimator_bi.h  d4est_estimator_residual.c  d4est_estimator_residual.h  d4est_estimator_stats.c  d4est_estimator_stats.h  estimator_stats.c  estimator_stats.h
Flux/: #ip_flux.c#  central_flux_params.h  central_flux_vector_fcns.c  central_flux_vector_fcns.h  compute_flux.c  compute_flux.h  curved_Gauss_central_flux_vector_fcns.c  curved_Gauss_central_flux_vector_fcns.h  curved_Gauss_primal_sipg_flux_fcns.c  curved_Gauss_primal_sipg_flux_fcns.h  curved_Gauss_primal_sipg_hesthaven_flux_fcns.c  curved_Gauss_primal_sipg_hesthaven_flux_fcns.h  curved_Gauss_primal_sipg_kronbichler_flux_fcns.c  curved_Gauss_primal_sipg_kronbichler_flux_fcns.h  curved_Gauss_primal_sipg_kronbichler_uniform_flux_fcns.c  curved_Gauss_primal_sipg_kronbichler_uniform_flux_fcns.h  curved_Gauss_primal_sipg_varingpen_flux_fcns.h  curved_Gauss_primal_sipg_varyingpen_flux_fcns.c  curved_Gauss_primal_sipg_varyingpen_flux_fcns.h  curved_Gauss_sipg_flux_scalar_fcns.c  curved_Gauss_sipg_flux_scalar_fcns.h  curved_Gauss_sipg_flux_vector_fcns.c  curved_Gauss_sipg_flux_vector_fcns.h  curved_compute_flux.c  curved_compute_flux.h  curved_dg_norm.c  curved_dg_norm.h  curved_test_mortarjacobianterms_flux_fcns.c  curved_test_mortarjacobianterms_flux_fcns.h  d4est_poisson_flux_sipg.h  dg_norm.c  dg_norm.h  ip_flux.c  ip_flux.h  ip_flux_aux.h  ip_flux_params.c  ip_flux_params.h  sipg_flux_scalar_fcns.c  sipg_flux_scalar_fcns.h  sipg_flux_vector_fcns.c  (+1 more)
Geometry/: d4est_connect_2pac.c  d4est_connect_2pac.h  d4est_connectivity_cubed_sphere.c  d4est_connectivity_cubed_sphere.h  d4est_geometry.c  d4est_geometry.h  d4est_geometry_2pac.c  d4est_geometry_brick.c  d4est_geometry_brick.h  d4est_geometry_compact_disk.c  d4est_geometry_compact_disk.h  d4est_geometry_compact_sphere.c  d4est_geometry_compact_sphere.h  d4est_geometry_cubed_sphere.c  d4est_geometry_cubed_sphere.h  d4est_geometry_cubed_sphere_inner_shell_block.c  d4est_geometry_cubed_sphere_inversemap_quadrature.h  d4est_geometry_cubed_sphere_outer_shell_block.c  d4est_geometry_disk.c  d4est_geometry_disk.h  d4est_geometry_general_wedge.c  d4est_geometry_general_wedge.h  d4est_geometry_hole_in_a_box.c  d4est_geometry_hole_in_a_box.h  d4est_geometry_pizza_half.c  d4est_geometry_pizza_half.h  d4est_geometry_shell.c  d4est_geometry_sphere.c  d4est_geometry_sphere.h  d4est_geometry_sphere_with_cube_hole.c  d4est_geometry_trap.c  d4est_mortars.c  d4est_mortars.h
GridFunctions/: grid_functions.c  grid_functions.h
IO/: d4est_checkpoint.c  d4est_checkpoint.h  d4est_h5.c  d4est_norms.c  d4est_norms.h  d4est_output.c  d4est_output.h  d4est_vtk.c  d4est_vtk.h  logging.conf
Kron/: d4est_kron.c  d4est_kron.h
LinearAlgebra/: d4est_blas.h  d4est_linalg.c  d4est_linalg.h  linalg.c  linalg.h
Mesh/: d4est_element_data.c  d4est_element_data.h  d4est_ghost_data.c  d4est_ghost_data.h  d4est_mesh.c  d4est_mesh.h  d4est_mortars.c  d4est_mortars.h  d4est_mortars_aux.h  d4est_xyz_functions.c  d4est_xyz_functions.h
Mortars/: d4est_mortars.c  d4est_mortars.h
Norms/: d4est_dg_norm.c  d4est_dg_norm.h
Operators/: curved_poisson_debug_vecs.c  curved_poisson_debug_vecs.h  curved_poisson_operator.c  curved_poisson_operator.h  curved_poisson_operator_primal.c  curved_poisson_operator_primal.h  d4est_poisson.c  d4est_poisson.h  grad.c  grad.h  poisson_debug_vecs.c  poisson_debug_vecs.h  poisson_operator.c  poisson_operator.h
Problems/: UniformNonlinearBueler  problem.h
Quadrature/: d4est_quadrature.c  d4est_quadrature.h  d4est_quadrature_compactified.c  d4est_quadrature_compactified.h  d4est_quadrature_gauss_legendre.c  d4est_quadrature_gauss_legendre.h  d4est_quadrature_gauss_lobatto.c  d4est_quadrature_gauss_lobatto.h  d4est_quadrature_legendre.c  d4est_quadrature_legendre.h  d4est_quadrature_lobatto.c  d4est_quadrature_lobatto.h
Solver/: cg.c  cg.h  cg_eigs.c  cg_eigs.h  d4est_cg.c  d4est_cg.h  d4est_petsc.h  d4est_solver_cg.c  d4est_solver_cg.h  d4est_solver_fcg.c  d4est_solver_fcg.h  d4est_solver_jacobian_tester.c  d4est_solver_jacobian_tester.h  d4est_solver_newton.c  d4est_solver_newton.h  d4est_solver_test_symmetry.c  d4est_solver_test_symmetry.h  jacobian_tester.c  jacobian_tester.h  krylov.h  krylov_info.h  krylov_pc.h  krylov_pc_invstiff.c  krylov_pc_invstiff.h  krylov_pc_jacobi.c  krylov_pc_multigrid.c  krylov_pc_multigrid.h  krylov_petsc.c  krylov_petsc.h  krylov_petsc_pc.h  matrix_sym_tester.c  matrix_sym_tester.h  multigrid.c  multigrid.h  multigrid_bottom_solver_cg.c  multigrid_bottom_solver_cg.h  multigrid_bottom_solver_cg_d4est.c  multigrid_bottom_solver_cg_d4est.h  multigrid_bottom_solver_cheby.c  multigrid_bottom_solver_cheby.h  (+27 more)
Tests/: test_d4est_amr.c  test_d4est_amr.input  test_d4est_boyen_york_model_fcns.c  test_d4est_boyen_york_model_fcns.input  test_d4est_brick_fcns.c  test_d4est_constant_density_star_fcns.c  test_d4est_constant_density_star_fcns.input  test_d4est_geometry.c  test_d4est_ghost_data.c  test_d4est_ghost_data.input  test_d4est_kron.c  test_d4est_lebesgue_measure.c  test_d4est_lgl_interpolate.c  test_d4est_linalg.c  test_d4est_mass_projection.c  test_d4est_mixed_element_data.c  test_d4est_mortar_computations.h  test_d4est_mortar_geometric_terms.c  test_d4est_okendon_fcns.c  test_d4est_operators.c  (+19 more)
(+787 files in other folders)
